# Design_Patterns

Creational_Patterns/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h  main.cpp
